Added feature to validate kaltura_id
